Add test to run each notebook, reporting all errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ tests_require =
     pytest-xdist
     matplotlib
     pandas
+    jupyter
 ; TODO: remove matplotlib, pandas dependencies when cleaning up tests
 
 ; TODO: exclude tests?
@@ -62,6 +63,7 @@ include =
 * = *.csv
 
 [tool:pytest]
-addopts = --junitxml=junit/test-results.xml --verbose -s -n auto
+addopts = --junitxml=junit/test-results.xml --verbose -s -n auto --strict
 markers =
     slow
+    notebook
